@@ -1,6 +1,6 @@
 [Desktop Entry]
 _Name=System Testing
-_Comment=Test your system and submit results to the Ubuntu Friendly project
+_Comment=Test your system and submit results to Launchpad
 Encoding=UTF-8
 Exec=/usr/bin/checkbox-qt
 Terminal=false
