@@ -4,6 +4,8 @@ checkbox (0.16.11) UNRELEASED; urgency=low
   * scripts/pm_test, scripts/fwts_test: Removed dmesg_common that's no longer
     present in fwts and added specific version dependency to checkbox
     (LP: #1206016)
+  * Removed references to Ubuntu Friendly due to sunsetting of the project.
+    (LP: #1224533)
 
  -- Brendan Donegan <brendan.donegan@canonical.com>  Mon, 09 Sep 2013 09:30:32 +0100
 
